[tool.poetry]
name = "sayagain"
version = "0.1.0"
description = ""
authors = ["JG <gaojunqi@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
zhipuai = "^2.1.0.20240521"
streamlit = "^1.35.0"
emoji = "^2.12.1"
openai = "^1.30.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
